core/overlays/dev/istio-ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "5"
